--- a/composer.json
+++ b/composer.json
@@ -6,15 +6,22 @@
         "laravel",
         "framework"
     ],
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/Mrjavaci/php-osm-static-api"
+        }
+    ],
     "license": "MIT",
     "require": {
         "php": "^8.1",
         "ext-simplexml": "*",
-        "dantsu/php-osm-static-api": "^0.6.4",
         "guzzlehttp/guzzle": "^7.2",
+        "intervention/image": "^2.7",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
-        "laravel/tinker": "^2.8"
+        "laravel/tinker": "^2.8",
+        "mrjavaci/php-osm-static-api": "dev-master"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
